UIP-4064 and UIP-4174: Added GoJS API key and fixed ZoomSlider

--- a/packages/flow-diagram/package.json
+++ b/packages/flow-diagram/package.json
@@ -26,6 +26,7 @@
         "build:cjs": "BABEL_ENV=cjs NODE_ENV=production babel --config-file ./babel.config.js src/ --out-dir lib/cjs/",
         "build:esm": "BABEL_ENV=esm NODE_ENV=production babel --config-file ./babel.config.js src/ --out-dir lib/",
         "build:assets": "cp -r ./src/img ./lib && cp -r ./src/img ./lib/cjs",
+        "build:css": "mkdir ./lib/css && cp -r ./src/css/*.css ./lib/css/",
         "coverage": "jest --coverage",
         "demo": "rm -rf ./upload && yarn build:icons && build-storybook -o upload",
         "verify": "yarn lint && yarn docs && yarn build-demo && test",
