--- a/packages/flow-diagram/package.json
+++ b/packages/flow-diagram/package.json
@@ -23,12 +23,13 @@
     "scripts": {
         "build": "rm -rf lib && npm-run-all build:*",
         "build:icons": "cd ../icons && yarn build",
+        "build:astro": "cd ../astro && yarn build",
         "build:cjs": "BABEL_ENV=cjs NODE_ENV=production babel --config-file ./babel.config.js src/ --out-dir lib/cjs/",
         "build:esm": "BABEL_ENV=esm NODE_ENV=production babel --config-file ./babel.config.js src/ --out-dir lib/",
         "build:assets": "cp -r ./src/img ./lib && cp -r ./src/img ./lib/cjs",
         "build:css": "mkdir ./lib/css && cp -r ./src/css/*.css ./lib/css/",
         "coverage": "jest --coverage",
-        "demo": "rm -rf ./demo && yarn build:icons && build-storybook -o demo",
+        "demo": "rm -rf ./demo && yarn build:icons && yarn build:astro && build-storybook -o demo",
         "verify": "yarn lint && yarn docs && yarn build-demo && test",
         "lint": "eslint .",
         "start": "yarn build:icons && start-storybook -p 1339",
@@ -39,7 +40,6 @@
     "dependencies": {
         "@mdi/js": "^5.8.55",
         "@mdi/react": "^1.4.0",
-        "@pingux/astro": "0.1.0-beta.8",
         "@pingux/icons": "^0.2.0",
         "gojs": "^2.1.16",
         "gojs-react": "^1.0.7",
@@ -49,6 +49,7 @@
         "uuid": "^7.0.3"
     },
     "devDependencies": {
+        "@pingux/astro": "0.1.0-beta.12",
         "@storybook/addon-actions": "^6.1.9",
         "@storybook/addon-docs": "^6.1.9",
         "@storybook/addon-links": "^6.1.9",
@@ -59,6 +60,7 @@
         "@testing-library/react-hooks": "^3.4.2"
     },
     "peerDependencies": {
+        "@pingux/astro": "0.1.0-beta.12",
         "react": "^16.8.6",
         "react-dom": "^16.13.1"
     }
