--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -66,13 +66,15 @@
     "@pingux/icons": "^0.2.0",
     "@react-aria/button": "^3.2.1",
     "@react-aria/checkbox": "^3.2.0",
-    "@react-aria/focus": "^3.2.1",
+    "@react-aria/focus": "^3.2.3",
     "@react-aria/interactions": "^3.3.0",
     "@react-aria/label": "^3.1.0",
     "@react-aria/link": "^3.1.1",
-    "@react-aria/listbox": "^3.2.1",
+    "@react-aria/listbox": "^3.2.3",
+    "@react-aria/overlays": "^3.6.0",
     "@react-aria/radio": "^3.1.1",
     "@react-aria/searchfield": "^3.1.1",
+    "@react-aria/select": "^3.2.3",
     "@react-aria/separator": "^3.1.1",
     "@react-aria/switch": "3.1.1",
     "@react-aria/tabs": "^3.0.0-alpha.1",
@@ -82,6 +84,7 @@
     "@react-stately/list": "^3.2.1",
     "@react-stately/radio": "^3.2.0",
     "@react-stately/searchfield": "^3.1.1",
+    "@react-stately/select": "^3.1.1",
     "@react-stately/toggle": "^3.2.0",
     "@rebass/forms": "^4.0.6",
     "@styled-system/prop-types": "^5.1.5",
