UIP-4130: Astro modal

--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@emotion/babel-preset-css-prop": "^10.0.27",
-    "@storybook/addon-a11y": "^6.0.28",
-    "@storybook/addon-actions": "^6.0.28",
-    "@storybook/addon-essentials": "^6.0.28",
-    "@storybook/addon-links": "^6.0.28",
-    "@storybook/addons": "^6.0.28",
-    "@storybook/react": "^6.0.28",
-    "@storybook/theming": "^6.0.28",
+    "@storybook/addon-a11y": "^6.1.16",
+    "@storybook/addon-actions": "^6.1.16",
+    "@storybook/addon-docs": "^6.1.16",
+    "@storybook/addon-essentials": "^6.1.16",
+    "@storybook/addon-links": "^6.1.16",
+    "@storybook/addons": "^6.1.16",
+    "@storybook/react": "^6.1.16",
+    "@storybook/theming": "^6.1.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/react-hooks": "^3.4.1",
@@ -66,6 +67,7 @@
     "@pingux/icons": "^0.2.0",
     "@react-aria/button": "^3.2.1",
     "@react-aria/checkbox": "^3.2.0",
+    "@react-aria/dialog": "^3.1.2",
     "@react-aria/focus": "^3.2.3",
     "@react-aria/interactions": "^3.3.0",
     "@react-aria/label": "^3.1.0",
@@ -82,6 +84,7 @@
     "@react-aria/visually-hidden": "3.2.1",
     "@react-stately/collections": "^3.2.1",
     "@react-stately/list": "^3.2.1",
+    "@react-stately/overlays": "^3.1.1",
     "@react-stately/radio": "^3.2.0",
     "@react-stately/searchfield": "^3.1.1",
     "@react-stately/select": "^3.1.1",
