--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@react-aria/radio": "^3.1.1",
     "@react-aria/searchfield": "^3.1.1",
     "@react-aria/select": "^3.2.3",
+    "@react-aria/selection": "^3.3.1",
     "@react-aria/separator": "^3.1.1",
     "@react-aria/switch": "3.1.1",
     "@react-aria/tabs": "^3.0.0-alpha.1",
