--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@react-aria/label": "^3.1.0",
     "@react-aria/link": "^3.1.1",
     "@react-aria/listbox": "^3.2.3",
+    "@react-aria/menu": "^3.1.4",
     "@react-aria/overlays": "^3.6.0",
     "@react-aria/radio": "^3.1.1",
     "@react-aria/searchfield": "^3.1.1",
@@ -84,11 +85,13 @@
     "@react-aria/visually-hidden": "3.2.1",
     "@react-stately/collections": "^3.2.1",
     "@react-stately/list": "^3.2.1",
+    "@react-stately/menu": "^3.2.1",
     "@react-stately/overlays": "^3.1.1",
     "@react-stately/radio": "^3.2.0",
     "@react-stately/searchfield": "^3.1.1",
     "@react-stately/select": "^3.1.1",
     "@react-stately/toggle": "^3.2.0",
+    "@react-stately/tree": "^3.1.2",
     "@rebass/forms": "^4.0.6",
     "@styled-system/prop-types": "^5.1.5",
     "@styled-system/props": "^5.1.5",
