--- a/packages/flow-diagram/package.json
+++ b/packages/flow-diagram/package.json
@@ -40,17 +40,18 @@
     "dependencies": {
         "@mdi/js": "^5.8.55",
         "@mdi/react": "^1.4.0",
-        "@pingux/astro": "0.1.0-beta.12",
+        "@pingux/astro": "0.3.0",
         "@pingux/icons": "^0.2.0",
         "gojs": "^2.1.16",
         "gojs-react": "^1.0.7",
         "jest-canvas-mock": "^2.3.0",
         "lodash": "^4.17.20",
         "prop-types": "^15.7.2",
+        "react-xarrows": "^1.5.2",
         "uuid": "^7.0.3"
     },
     "devDependencies": {
-        "@pingux/astro": "0.1.0-beta.12",
+        "@pingux/astro": "0.3.0",
         "@storybook/addon-actions": "^6.1.9",
         "@storybook/addon-docs": "^6.1.9",
         "@storybook/addon-links": "^6.1.9",
