--- a/packages/flow-diagram/package.json
+++ b/packages/flow-diagram/package.json
@@ -38,6 +38,8 @@
         "docs": "gulp docs"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.3",
+        "@material-ui/lab": "^4.0.0-alpha.57",
         "@mdi/js": "^5.8.55",
         "@mdi/react": "^1.4.0",
         "@pingux/astro": "0.3.0",
