update to publish end user from root

--- a/packages/end-user/package.json
+++ b/packages/end-user/package.json
@@ -6,9 +6,15 @@
   "author": "uxdev@pingidentity.com",
   "license": "UNLICENSED",
   "publishConfig": {
-    "directory": "dist",
+    "directory": "lib",
     "registry": "https://art01.corp.pingidentity.com/artifactory/api/npm/npm-virtual/"
   },
+  "directories": {
+    "lib": "lib"
+  },
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
     "@babel/runtime": "^7.4.2",
@@ -141,12 +147,14 @@
       "/tests/coverage/",
       "/build/",
       "/dist/",
+      "/lib/",
       "commonTests.js?(x)"
     ],
     "modulePathIgnorePatterns": [
       "/node/",
       "/build/",
-      "/dist/"
+      "/dist/",
+      "/lib/"
     ],
     "setupFiles": [
       "<rootDir>/src/util/polyfills.js",
@@ -160,12 +168,12 @@
     }
   },
   "scripts": {
-    "pack": "rm -rf ./build && build-storybook -o build --no-dll",
+    "demo": "rm -rf ./build && build-storybook -o build --no-dll",
     "cdn": "rm -rf ./cdn && webpack --config webpack.cdn.js && for dir in ./cdn/*/; do mkdir $dir/icons; mkdir $dir/logos; mkdir $dir/images; done && cp -R ./src/icons/. ./cdn/*/icons/ && cp -R ./src/logos/. ./cdn/*/logos/ && cp -R ./src/images/. ./cdn/*/images",
     "start": "start-storybook -p 6006 --no-dll",
     "lint": "eslint src/** && stylelint src/**/*.scss",
     "doc": "jsdoc -c ./jsdoc.json",
-    "dist": "gulp build-dist && yarn run cdn && cp -R ./cdn/*/. ./dist/",
+    "build": "gulp build-dist && yarn run cdn && cp -R ./cdn/*/. ./lib/",
     "jest": "jest",
     "test": "jest",
     "coverage": "jest --coverage",
